# gpui-tray

./: Cargo.toml
.github/: dependabot.yml
crates/core/: Cargo.toml
crates/core/src/: error.rs  event.rs  events.rs  lib.rs  platform_trait.rs  tray.rs
crates/gpui-tray/: Cargo.toml
crates/gpui-tray/examples/: basic.rs  events.rs  icon.rs  menu.rs  tray.rs  update.rs
crates/gpui-tray/src/: lib.rs  manager.rs
crates/linux/: Cargo.toml
crates/linux/src/: dbus.rs  icon.rs  lib.rs  tray.rs
crates/macos/: Cargo.toml
crates/macos/src/: lib.rs  stub.rs
crates/neko-tray/: Cargo.toml
crates/neko-tray/examples/: basic.rs  events.rs  icon.rs  menu.rs  update.rs
crates/neko-tray/src/: lib.rs  manager.rs
crates/tray/: Cargo.toml
crates/tray-linux/: Cargo.toml
crates/tray-linux/src/: lib.rs  state.rs  tray.rs
crates/tray-macos/: Cargo.toml
crates/tray-macos/src/: lib.rs  state.rs  tray.rs
crates/tray-windows/: Cargo.toml
crates/tray-windows/src/: lib.rs  state.rs  tray.rs  util.rs  window.rs
crates/tray/src/: app_ext.rs  event.rs  events.rs  icon.rs  lib.rs  menu.rs  traits.rs  types.rs
crates/windows/: Cargo.toml
crates/windows/src/: icon.rs  lib.rs  tray.rs  util.rs  window.rs
docs/: README.md
